--- a/fesapade/package.json
+++ b/fesapade/package.json
@@ -19,11 +19,12 @@
     "@angular/platform-browser": "~11.2.6",
     "@angular/platform-browser-dynamic": "~11.2.6",
     "@angular/router": "~11.2.6",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "@popperjs/core": "^2.9.1",
     "bootstrap": "^4.6.0",
     "html2canvas": "^1.0.0-rc.7",
     "jquery": "^3.6.0",
-    "jspdf": "^1.5.3",
+    "jspdf": "^2.3.1",
     "ngx-toastr": "^13.2.1",
     "path-parse": "^1.0.6",
     "popper.js": "^1.16.1",
@@ -32,10 +33,11 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.5",
+    "@angular-devkit/build-angular": "^12.0.1",
     "@angular/cli": "^11.2.5",
     "@angular/compiler-cli": "~11.2.6",
     "@angular/language-service": "~11.2.6",
+    "@angular/localize": "^11.2.6",
     "@types/html2canvas": "0.0.36",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
